# wealthbox-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  run-wbox.sh  smoke_test.sh  test.txt
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release-binaries.yml
codex-skill/wealthbox-crm/: SKILL.md  bootstrap.md
codex-skill/wealthbox-crm/firm-examples/: projects.md
codex-skill/wealthbox-crm/references/: projects.md  workflows.md
docs/: changelog.md  cli-reference.md  contributing.md  getting-started.md  index.md  promotion.md
docs/agents/: domain.md
docs/overrides/: main.html
docs/skills/wealthbox-crm/: firm-config.example.md
docs/skills/wealthbox-crm/references/: contacts.md
docs/superpowers/plans/: 2026-03-30-v1-release.md
docs/superpowers/specs/: 2026-03-30-v1-release-design.md
plugins/wealthbox-crm/.claude-plugin/: plugin.json
plugins/wealthbox-crm/skills/wealthbox-crm/firm-examples/: contacts.md  events.md  notes.md
plugins/wealthbox-crm/skills/wealthbox-crm/references/: lookups.md  tasks.md
resources/: Contact Fields.xlsx  contact_fields.xlsx
resources/api_examples/: _destroy_fields.jsonc  contact_household_create.jsonc  contact_household_update.jsonc  contact_org_create.jsonc  contact_org_update.jsonc  contact_person_create.jsonc  contact_person_update.jsonc  contact_trust_create.jsonc  contact_trust_update.jsonc  event_create.jsonc  event_update.jsonc  note_create.jsonc  note_update.jsonc  task_create.jsonc  task_update.jsonc
scripts/: install.ps1  install.sh  run-wbox.sh  smoke_test.sh  sync-plugin.py  wbox_entry.py
src/wealthbox_tools/: __init__.py  self_upgrade.py
src/wealthbox_tools/cli/: README.md  _client.py  _config.py  _factory.py  _format.py  _resolve.py  _skill_bootstrap.py  _skill_paths.py  _skill_platforms.py  _util.py  activity.py  categories.py  comments.py  config.py  contacts.py  doctor.py  events.py  firm.py  households.py  internals.py  main.py  me.py  notes.py  opportunities.py  prefs.py  projects.py  readonly.py  self_cmd.py  skills.py  tasks.py  users.py  workflows.py
src/wealthbox_tools/client/: __init__.py  activity.py  base.py  categories.py  comments.py  contacts.py  events.py  households.py  me.py  notes.py  opportunities.py  projects.py  readonly.py  tasks.py  users.py  workflows.py
src/wealthbox_tools/firm/: __init__.py  archive.py  diff.py
src/wealthbox_tools/internals/: __init__.py  skill_ref_gen.py
src/wealthbox_tools/models/: __init__.py  activity.py  comments.py  common.py  contacts.py  custom_fields.py  enums.py  events.py  households.py  notes.py  opportunities.py  projects.py  tasks.py  workflows.py
src/wealthbox_tools/skills/wealthbox-crm/: SKILL.md  bootstrap.md
src/wealthbox_tools/skills/wealthbox-crm/firm-examples/: contacts.md  opportunities.md  tasks.md  workflows.md
src/wealthbox_tools/skills/wealthbox-crm/references/: contacts.md  events.md  households.md  lookups.md  notes.md  opportunities.md  projects.md  tasks.md  workflows.md
tests/: conftest.py  test_activity_list.py  test_base_client.py  test_config.py  test_config_set_token_hint.py  test_contact_roles.py  test_contacts_create.py  test_contacts_list_filters.py  test_contacts_update.py  test_deletes.py  test_doctor_cli.py  test_events_create.py  test_events_update.py  test_exit_codes.py  test_firm_diff.py  test_firm_export.py  test_firm_import.py  test_get_with_comments.py  test_me.py  test_model_contracts.py  test_notes_create.py  test_notes_list.py  test_notes_update.py  test_opportunities_create.py  test_opportunities_update.py  test_output_brief.py  test_output_formats.py  test_prefs.py  test_projects_create.py  test_projects_update.py  test_rate_limit_isolation.py  test_self_upgrade.py  test_skill_bootstrap_orchestrate.py  test_skill_bootstrap_render.py  test_skill_platforms.py  test_skill_ref_gen.py  test_skill_template_resource.py  test_skills_cli_bootstrap.py  test_skills_cli_doctor.py  test_skills_cli_install.py  (+14 more)
