[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wealthbox-tools"
version = "0.8.6"
description = "CLI and client library for the Wealthbox CRM API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kadin Bullock"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "python-dotenv>=1.0,<2.0",
    "tabulate>=0.9,<1.0",
]

[project.urls]
Homepage = "https://github.com/massive-value/wealthbox-cli"
Issues = "https://github.com/massive-value/wealthbox-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
wbox = "wealthbox_tools.cli.main:app"
wb = "wealthbox_tools.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wealthbox_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
