[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wealthbox-cli"
version = "1.6.0"
description = "CLI and client library for the Wealthbox CRM API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kadin Bullock"}
]
license = {text = "Apache-2.0"}
keywords = [
    "wealthbox",
    "crm",
    "cli",
    "command-line",
    "api",
    "financial-advisor",
    "wealth-management",
    "fintech",
    "contacts",
    "client-management",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "python-dotenv>=1.0,<2.0",
    "tabulate>=0.9,<1.0",
]

[project.urls]
Homepage = "https://github.com/massive-value/wealthbox-cli"
Documentation = "https://massive-value.github.io/wealthbox-cli/"
Repository = "https://github.com/massive-value/wealthbox-cli"
Issues = "https://github.com/massive-value/wealthbox-cli/issues"
Changelog = "https://github.com/massive-value/wealthbox-cli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
wbox = "wealthbox_tools.cli.main:app"
wb = "wealthbox_tools.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wealthbox_tools"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "resources/",
    "scripts/",
    "dev/",
    ".python-version",
    "docs/superpowers/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
